# libyfinance

./: .clang-format  CMakeLists.txt  Dockerfile  docker.sh  format.sh  make.sh
.agent/workflows/: verify-locally.md
.github/workflows/: macro-report.yml
app/: CMakeLists.txt  backtest.cpp  buy_and_hold.cpp  fetch.cpp  fng.cpp  fred.cpp  macro.cpp  macro_backtest.cpp  macro_sweep.cpp  qld_dca_backtest.cpp  stock.cpp
config/: macro_allocation.json  macro_sweep.json
config/strategies/: aggressive.json  balanced.json  defensive.json
docs/: data.json  fear_and_greed.md  fred_series.md  index.html  stock_info.md
include/: fng_info.hpp  fred_info.hpp  indicator.hpp  macro_scorer.hpp  stock_info.hpp  yfinance.hpp
include/backtest/: backtest_engine.hpp
include/macro/: macro_backtester.hpp
include/strategy/: istrategy.hpp
lib/rsi/: rsi_strategy.cpp  rsi_strategy.hpp
lib/sma_crossover/: sma_crossover.cpp  sma_crossover.hpp
src/: yfinance.cpp
src/backtest/: backtest_engine.cpp
src/macro/: macro_backtester.cpp  macro_scorer.cpp
